add header with translation from cookie

--- a/frontend/stableuser/public/locales/en/translation.json
+++ b/frontend/stableuser/public/locales/en/translation.json
@@ -4,5 +4,6 @@
     "Horses": "Horses",
     "Horse": "Horse",
     "Ferrier": "Ferrier",
-    "Vet": "Veterinary"
+    "Vet": "Veterinary",
+    "Owners": "Owners"
 }
