--- a/frontend/stableuser/public/locales/hu/translation.json
+++ b/frontend/stableuser/public/locales/hu/translation.json
@@ -1,8 +1,10 @@
 {
-    "welcome_msg": "Stabelity, rendet tart a lovardádban",
+    "welcome_msg": "Stabelity, rendet tart a lovardában",
     "language" :"Magyar",
     "Horses": "Lovak",
     "Horse": "Ló",
     "Ferrier": "Patkolás",
-    "Vet": "Állatorvos"
+    "Vet": "Állatorvos",
+    "Owners": "Tulajdonosok"
 }
+
