make translations work

--- a/frontend/vite-project/src/i18n/en/translation.json
+++ b/frontend/vite-project/src/i18n/en/translation.json
@@ -4,6 +4,7 @@
         "Horses": "Horses",
         "Horse": "Horse",
         "horse": "horse",
+        "horses": "horses",
         "Ferrier": "Ferrier",
         "Vet": "Veterinary",
         "Owners": "Owners",
