--- a/frontend/vite-project/src/i18n/hu/translation.json
+++ b/frontend/vite-project/src/i18n/hu/translation.json
@@ -5,6 +5,7 @@
         "Horses": "Lovak",
         "Horse": "Ló",
         "horse": "ló",
+        "horses": "lovak",
         "Ferrier": "Patkolás",
         "Vet": "Állatorvos",
         "Owners": "Tulajdonosok",
