--- a/frontend/vite-project/src/i18n/hu/translation.json
+++ b/frontend/vite-project/src/i18n/hu/translation.json
@@ -5,7 +5,9 @@
     "horse": "ló",
     "Horses": "Lovak",
     "horses": "lovak",
+    "Login" : "Bejelentkezés",
     "Owners": "Tulajdonosok",
+    "Register": "Regisztráció",
     "Vet": "Állatorvos",
     "welcome_msg": "Stabelity, rendet tart a lovardában"
 }
