--- a/frontend/vite-project/src/i18n/en/translation.json
+++ b/frontend/vite-project/src/i18n/en/translation.json
@@ -7,6 +7,7 @@
     "horses": "horses",
     "Login" : "Login",
     "Owners": "Owners",
+    "password" : "password", 
     "Register": "Register",
     "Vet": "Veterinary",
     "welcome_msg": "Stableity keeps your stable organized"
