--- a/frontend/vite-project/src/i18n/hu/translation.json
+++ b/frontend/vite-project/src/i18n/hu/translation.json
@@ -6,6 +6,7 @@
     "Horses": "Lovak",
     "horses": "lovak",
     "Login" : "Bejelentkezés",
+    "password" : "jelszó",
     "Owners": "Tulajdonosok",
     "Register": "Regisztráció",
     "Vet": "Állatorvos",
